<package format="2">
    <name>amcl</name>
    <version>1.12.13</version>
    <description>
        <p>
            amcl is a probabilistic localization system for a robot moving in
            2D. It implements the adaptive (or KLD-sampling) Monte Carlo
            localization approach (as described by Dieter Fox), which uses a
            particle filter to track the pose of a robot against a known map.
        </p>
        <p>
            This node is derived, with thanks, from Andrew Howard's excellent
            'amcl' Player driver.
        </p>
    </description>
    <url>http://wiki.ros.org/amcl</url>
    <author>Brian P. Gerkey</author>
    <author>contradict@gmail.com</author>
    <maintainer email="davidvlu@gmail.com">David V. Lu!!</maintainer>
    <maintainer email="mferguson@fetchrobotics.com">Michael Ferguson</maintainer>
    <license>LGPL</license>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>rosbag</build_depend>
    <build_depend>dynamic_reconfigure</build_depend>
    <build_depend>message_filters</build_depend>
    <build_depend>nav_msgs</build_depend>
    <build_depend>geometry_msgs</build_depend>
    <build_depend>move_base_msgs</build_depend>
    <build_depend>roscpp</build_depend>
    <build_depend>rostest</build_depend>
    <build_depend>std_srvs</build_depend>
    <build_depend>tf</build_depend>
    <build_depend>srslib_timing</build_depend>

    <exec_depend>rosbag</exec_depend>
    <exec_depend>roscpp</exec_depend>
    <exec_depend>dynamic_reconfigure</exec_depend>
    <exec_depend>tf</exec_depend>
    <exec_depend>nav_msgs</exec_depend>
    <exec_depend>move_base_msgs</exec_depend>
    <exec_depend>srslib_timing</exec_depend>

    <test_depend>map_server</test_depend>
</package>
