<package>
    <name>base_local_planner</name>
    <version>1.12.13</version>
    <description>

        This package provides implementations of the Trajectory Rollout and Dynamic Window approaches to local robot navigation on a plane. Given a plan to follow and a costmap, the controller produces velocity commands to send to a mobile base. This package supports both holonomic and non-holonomic robots, any robot footprint that can be represented as a convex polygon or circle, and exposes its configuration as ROS parameters that can be set in a launch file. This package's ROS wrapper adheres to the BaseLocalPlanner interface specified in the <a href="http://wiki.ros.org/nav_core">nav_core</a> package. 

    </description>
    <author>Eitan Marder-Eppstein</author>
    <author>Eric Perko</author>
    <author>contradict@gmail.com</author>
    <maintainer email="davidvlu@gmail.com">David V. Lu!!</maintainer>
    <maintainer email="mferguson@fetchrobotics.com">Michael Ferguson</maintainer>
    <license>BSD</license>
    <url>http://wiki.ros.org/base_local_planner</url>

    <buildtool_depend version_gte="0.5.68">catkin</buildtool_depend>

    <build_depend>cmake_modules</build_depend>
    <build_depend>std_msgs</build_depend>
    <build_depend>nav_msgs</build_depend>
    <build_depend>rosconsole</build_depend>
    <build_depend>roscpp</build_depend>
    <build_depend>tf</build_depend>
    <build_depend>rospy</build_depend>
    <build_depend>pluginlib</build_depend>
    <build_depend>costmap_2d</build_depend>
    <build_depend>voxel_grid</build_depend>
    <build_depend>angles</build_depend>
    <build_depend>visualization_msgs</build_depend>
    <build_depend>geometry_msgs</build_depend>
    <build_depend>nav_core</build_depend>
    <build_depend>pcl_conversions</build_depend>
    <build_depend>pcl_ros</build_depend>
    <build_depend>eigen</build_depend>
    <build_depend>dynamic_reconfigure</build_depend>
    <build_depend>message_generation</build_depend>

    <run_depend>std_msgs</run_depend>
    <run_depend>nav_msgs</run_depend>
    <run_depend>rosconsole</run_depend>
    <run_depend>roscpp</run_depend>
    <run_depend>tf</run_depend>
    <run_depend>rospy</run_depend>
    <run_depend>pluginlib</run_depend>
    <run_depend>costmap_2d</run_depend>
    <run_depend>voxel_grid</run_depend>
    <run_depend>angles</run_depend>
    <run_depend>visualization_msgs</run_depend>
    <run_depend>geometry_msgs</run_depend>
    <run_depend>nav_core</run_depend>
    <run_depend>pcl_ros</run_depend>
    <run_depend>eigen</run_depend>
    <run_depend>dynamic_reconfigure</run_depend>
    <run_depend>message_generation</run_depend>

    <export>
        <nav_core plugin="${prefix}/blp_plugin.xml" />
    </export>
</package>
