<package format="2">
    <name>base_local_planner</name>
    <version>1.12.13</version>
    <description>

        This package provides implementations of the Trajectory Rollout and Dynamic Window approaches to local robot navigation on a plane. Given a plan to follow and a costmap, the controller produces velocity commands to send to a mobile base. This package supports both holonomic and non-holonomic robots, any robot footprint that can be represented as a convex polygon or circle, and exposes its configuration as ROS parameters that can be set in a launch file. This package's ROS wrapper adheres to the BaseLocalPlanner interface specified in the <a href="http://wiki.ros.org/nav_core">nav_core</a> package.

    </description>
    <author>Eitan Marder-Eppstein</author>
    <author>Eric Perko</author>
    <author>contradict@gmail.com</author>
    <maintainer email="davidvlu@gmail.com">David V. Lu!!</maintainer>
    <maintainer email="mferguson@fetchrobotics.com">Michael Ferguson</maintainer>
    <license>BSD</license>
    <url>http://wiki.ros.org/base_local_planner</url>

    <buildtool_depend version_gte="0.5.68">catkin</buildtool_depend>

    <build_depend>cmake_modules</build_depend>
    <build_depend>std_msgs</build_depend>
    <build_depend>nav_msgs</build_depend>
    <build_depend>rosconsole</build_depend>
    <build_depend>roscpp</build_depend>
    <build_depend>tf</build_depend>
    <build_depend>rospy</build_depend>
    <build_depend>pluginlib</build_depend>
    <build_depend>costmap_2d</build_depend>
    <build_depend>voxel_grid</build_depend>
    <build_depend>angles</build_depend>
    <build_depend>visualization_msgs</build_depend>
    <build_depend>geometry_msgs</build_depend>
    <build_depend>nav_core</build_depend>
    <build_depend>pcl_conversions</build_depend>
    <build_depend>pcl_ros</build_depend>
    <build_depend>eigen</build_depend>
    <build_depend>dynamic_reconfigure</build_depend>
    <build_depend>message_generation</build_depend>
    <build_depend>srslib_timing</build_depend>
    <build_depend>srslib_framework</build_depend>

    <exec_depend>std_msgs</exec_depend>
    <exec_depend>nav_msgs</exec_depend>
    <exec_depend>rosconsole</exec_depend>
    <exec_depend>roscpp</exec_depend>
    <exec_depend>tf</exec_depend>
    <exec_depend>rospy</exec_depend>
    <exec_depend>pluginlib</exec_depend>
    <exec_depend>costmap_2d</exec_depend>
    <exec_depend>voxel_grid</exec_depend>
    <exec_depend>angles</exec_depend>
    <exec_depend>visualization_msgs</exec_depend>
    <exec_depend>geometry_msgs</exec_depend>
    <exec_depend>nav_core</exec_depend>
    <exec_depend>pcl_ros</exec_depend>
    <exec_depend>eigen</exec_depend>
    <exec_depend>dynamic_reconfigure</exec_depend>
    <exec_depend>message_generation</exec_depend>
    <exec_depend>srslib_timing</exec_depend>

    <export>
        <nav_core plugin="${prefix}/blp_plugin.xml" />
    </export>
</package>
