<package format="2">
    <name>carrot_planner</name>
    <version>1.12.13</version>
    <description>

        This planner attempts to find a legal place to put a carrot for the robot to follow. It does this by moving back along the vector between the robot and the goal point.

    </description>
    <author>Eitan Marder-Eppstein</author>
    <author>Sachin Chitta</author>
    <author>contradict@gmail.com</author>
    <maintainer email="davidvlu@gmail.com">David V. Lu!!</maintainer>
    <maintainer email="mferguson@fetchrobotics.com">Michael Ferguson</maintainer>
    <license>BSD</license>
    <url>http://wiki.ros.org/carrot_planner</url>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>roscpp</build_depend>
    <build_depend>costmap_2d</build_depend>
    <build_depend>pluginlib</build_depend>
    <build_depend>nav_core</build_depend>
    <build_depend>base_local_planner</build_depend>
    <build_depend>tf</build_depend>
    <!--<build_depend>angles</build_depend>-->
    <build_depend>eigen</build_depend>

    <exec_depend>roscpp</exec_depend>
    <exec_depend>costmap_2d</exec_depend>
    <exec_depend>pluginlib</exec_depend>
    <exec_depend>nav_core</exec_depend>
    <exec_depend>base_local_planner</exec_depend>
    <exec_depend>tf</exec_depend>
    <!--<exec_depend>angles</exec_depend>-->
    <exec_depend>eigen</exec_depend>

    <export>
        <nav_core plugin="${prefix}/bgp_plugin.xml" />
    </export>

</package>


